--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>Hello World!</h1>
-<a href="./Codecademy/website-style-guide/index.html">Website style guide project</a>
+<!DOCTYPE html>
+<head>
+    <title>Paul's Portfolio Page</title>
+    <link rel="stylesheet" href="./styles/index-styles.css">
+</head>
+<body>
+    <h1>Codecademy Projects</h1>
+    <a href="./Codecademy/website-style-guide.html">Website style guide project</a>
+    <a href="./Codecademy/tea-cozy.html">Tea Website Project</a>
+</body>
