--- a/Codecademy/tea-cozy.html
+++ b/Codecademy/tea-cozy.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Tea Cozy Project</title>
-        <link href="./styles.css" type="text/css" rel="stylesheet">
+        <link href="./styles/tea-cozy-styles.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <header>
