--- a/Codecademy/website-style-guide.html
+++ b/Codecademy/website-style-guide.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Style Guide</title>
-        <link href="./styles.css" type="text/css" rel="stylesheet">
+        <link href="./styles/website-style-guide-styles.css" type="text/css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lora&family=Oswald&family=Smooch+Sans&display=swap" rel="stylesheet">
