--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
     <title>Paul's Portfolio Page</title>
     <link rel="stylesheet" href="./styles/index-styles.css" type="text/css">
 </head>
+
 <header>
-  <h1>Paul Smith</h1>
-  <nav>
-    <li><a href="#aboutMe">About Me</a></li>
-    <li><a href="#">About Me</a></li>
-    <li><a href="#">About Me</a></li>
+<a href="#default" class="logo">Paul Smith</a>
+  <nav class="header-right">
+    <a class="active" href="#home">About Me</a>
+    <a href="#contact">Projects</a>
+    <a href="#about">Contact</a>
   </nav>
 </header>
+
+ 
 <body>
-  
-  <article id="aboutMe">
+  <article class="card">
     <div class="blurb">
       <h1>About me</h1>
       <p>Hi I am Paul, an aspiring software developer, with several years of amateur development experience.</p>
@@ -23,14 +25,16 @@
       <img src="./Media/paul_headshot.JPG" id="headshot">
     </div>
     <div class="bio">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Interdum velit euismod in pellentesque massa placerat duis ultricies lacus. Penatibus et magnis dis parturient. Scelerisque fermentum dui faucibus in ornare quam viverra orci sagittis. Urna duis convallis convallis tellus id interdum velit. Scelerisque mauris pellentesque pulvinar pellentesque habitant. Erat imperdiet sed euismod nisi porta. Neque viverra justo nec ultrices dui sapien eget mi. Magna etiam tempor orci eu lobortis. Auctor eu augue ut lectus arcu bibendum at varius vel. Sed velit dignissim sodales ut. Bibendum at varius vel pharetra vel. Risus viverra adipiscing at in tellus integer. Lacus laoreet non curabitur gravida arcu. Penatibus et magnis dis parturient montes nascetur ridiculus mus mauris. Aliquam ut porttitor leo a diam sollicitudin tempor id. Hac habitasse platea dictumst quisque sagittis purus. Odio ut sem nulla pharetra diam. Vitae suscipit tellus mauris a diam. Ac tincidunt vitae semper quis lectus nulla at volutpat.
-
-Fermentum iaculis eu non diam. Lectus sit amet est placerat in egestas erat imperdiet. Viverra nam libero justo laoreet sit amet cursus. Duis convallis convallis tellus id interdum. Nunc scelerisque viverra mauris in. Id diam vel quam elementum. Magna sit amet purus gravida quis blandit. Quisque egestas diam in arcu cursus euismod. Risus feugiat in ante metus dictum. Duis tristique sollicitudin nibh sit. Commodo quis imperdiet massa tincidunt nunc pulvinar. Tempus urna et pharetra pharetra massa massa ultricies mi. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Eget felis eget nunc lobortis mattis aliquam faucibus purus. Parturient montes nascetur ridiculus mus mauris.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Interdum velit euismod in pellentesque massa placerat duis ultricies lacus. Penatibus et magnis dis parturient. Scelerisque fermentum dui faucibus in ornare quam viverra orci sagittis. Urna duis convallis convallis tellus id interdum velit. Scelerisque mauris pellentesque pulvinar pellentesque habitant. Erat imperdiet sed euismod nisi porta. Neque viverra justo nec ultrices dui sapien eget mi. Magna etiam tempor orci eu lobortis. Auctor eu augue ut lectus arcu bibendum at varius vel. Sed velit dignissim sodales ut. Bibendum at varius vel pharetra vel. Risus viverra adipiscing at in tellus integer. Lacus laoreet non curabitur gravida arcu. Penatibus et magnis dis parturient montes nascetur ridiculus mus mauris. Aliquam ut porttitor leo a diam sollicitudin tempor id. Hac habitasse platea dictumst quisque sagittis purus. Odio ut sem nulla pharetra diam. Vitae suscipit tellus mauris a diam. Ac tincidunt vitae semper quis lectus nulla at volutpat.</p>
+	<br>
+	<p>Fermentum iaculis eu non diam. Lectus sit amet est placerat in egestas erat imperdiet. Viverra nam libero justo laoreet sit amet cursus. Duis convallis convallis tellus id interdum. Nunc scelerisque viverra mauris in. Id diam vel quam elementum. Magna sit amet purus gravida quis blandit. Quisque egestas diam in arcu cursus euismod. Risus feugiat in ante metus dictum. Duis tristique sollicitudin nibh sit. Commodo quis imperdiet massa tincidunt nunc pulvinar. Tempus urna et pharetra pharetra massa massa ultricies mi. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Eget felis eget nunc lobortis mattis aliquam faucibus purus. Parturient montes nascetur ridiculus mus mauris.</p>
     </div>
   </article>
+  <article class="card">
     <h1>Codecademy Projects</h1>
     <a href="./Codecademy/website-style-guide.html">Website style guide project</a>
     <a href="./Codecademy/tea-cozy.html">Tea Website Project</a>
+  </article>
 </body>
 <footer>
   <p>Hello Testers</p>
