Added contact and project

--- a/index.html
+++ b/index.html
@@ -35,26 +35,53 @@
     <h1>Projects</h1>
     <div class="cards">
       <a href="./Codecademy/website-style-guide.html" class="card">
-	<div>
-	  <img src="./Media/Style-Guide-Thumbnail.jpg" alt="Style Guide" style="width:100%; height:auto;">
-	  <div class="container">
-	    <h4><b>Style guide project</b></h4>
-	    <p>Basic CSS project</p>
-	  </div>
-	</div>
+	      <div>
+	        <img src="./Media/Style-Guide-Thumbnail.jpg" alt="Style Guide" style="width:100%; height:auto;">
+	        <div class="container">
+	          <h4><b>Style guide project</b></h4>
+	          <p>Basic CSS project</p>
+	        </div>
+	      </div>
       </a>
       <a href="./Codecademy/tea-cozy.html" class="card">
-	<div>
-	  <img src="./Media/Tea-Site-Thumbnail.jpg" alt="Tea Website" style="width:100%; height:auto;">
-	  <div class="container">
-	    <h4><b>Tea website project</b></h4>
-	    <p>Website project</p>
-	  </div>
-	</div>
+	      <div>
+	        <img src="./Media/Tea-Site-Thumbnail.jpg" alt="Tea Website" style="width:100%; height:auto;">
+	        <div class="container">
+	          <h4><b>Tea website project</b></h4>
+	          <p>Website project</p>
+	        </div>
+	      </div>
+      </a>
+      <a href="https://github.com/Fourineye/jazz" class="card">
+        <div>
+          <img src="./Media/jazz.jpg" alt="Code Snippet" style="width:100%; height:auto;">
+          <div class="container">
+            <h4><b>jazz</b></h4>
+            <p>Pygame engine</p>
+          </div>
+        </div>
       </a>
     </div> 
   </article>
+  <article id="contact">
+    <div>
+      <a href="mailto:paulsmith8812@gmail.com">
+        <img src="./Media/gmail.png" alt="Email" style="width:2rem; height:auto">
+      </a>
+      <a href="https://www.linkedin.com/in/paul-smith-772421145">
+        <img src="./Media/linkedin.png" alt="LinkedIn" style="width:2rem; height:auto">
+      </a>
+    </div>
+  </article>
 </body>
 <footer>
-  <p>Hello Testers</p>
+  <p>Paul Smith 2024</p>
+  <ul>
+    <li>
+      <a href="https://www.flaticon.com/free-icons/gmail" title="gmail icons">Gmail icons created by Pixel perfect - Flaticon</a>
+    </li>
+    <li>
+      <a href="https://www.flaticon.com/free-icons/linkedin" title="linkedin icons">Linkedin icons created by riajulislam - Flaticon</a>
+    </li>
+  </ul>
 </footer>
